# ai-native-crm-campaign-platform

./: .gitignore  AGENTS.md  DECISIONS.md  README.md  comparison_report.md
backend/: .env.example  alembic.ini  check_camp_121.py  check_users.py  pyproject.toml
backend/app/: main.py
backend/app/core/: base.py  config.py  constants.py  database.py  dependencies.py  logging.py  security.py
backend/app/models/: __init__.py  audience.py  campaign.py  campaign_stats.py  customer.py  customer_health.py  delivery.py  message.py  order.py  segment.py  tenant.py
backend/app/routers/: ai.py  analytics.py  audiences.py  auth.py  campaigns.py  communications.py  customers.py  dashboard.py  delivery.py  health.py  orders.py  tenants.py
backend/app/schemas/: ai.py  analytics.py  campaign.py  (+9 more)
backend/migrations/: env.py  initial_schema.sql
backend/scripts/: check_contracts.py
backend/test/: fix_stuck_campaigns.py  reset_campaign.py  scratch_apply_rls.py  scratch_apply_rls_admin.py  scratch_benchmark_rls.py  scratch_check_campaign.py  scratch_check_leak.py  scratch_create_role.py  scratch_debug_endpoint.py  scratch_disable_bypass.py  scratch_eval_ai_schema.py  scratch_list_roles.py  scratch_seed_tenants.py  scratch_test_api_query_error.py  scratch_test_backend.py  scratch_test_local_create_campaign.py  scratch_test_query_error.py  scratch_update_users_policy.py  scratch_validate_rls_flow.py  test_ai.py  test_direct.py  test_models.py  test_onboarding.py  test_query_error.py
channel-service/: .env.example  channel_service.db  pyproject.toml
channel-service/app/: main.py
(+86 files in other folders)
