[project]
name = "nudge-backend"
version = "0.1.0"
description = "Nudge CRM — FastAPI backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",   # sync driver for Alembic migrations
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "greenlet>=3.0.0",
    "azure-ai-inference>=1.0.0b9",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
